# pipeline-guardian

./: .env.example  .env.production.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
src/pipeline_guardian/: __init__.py  agent.py  cli.py  client.py  config.py  debugger.py  github_api.py  jenkins_api.py  server.py
src/pipeline_guardian/web/: __init__.py  app.py
src/pipeline_guardian/web/static/: index.html
