[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipeline-guardian"
version = "0.1.0"
description = "AI-assisted pipeline debugging tool using Jenkins MCP Plugin"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Pipeline Guardian Team" }
]
keywords = ["jenkins", "mcp", "pipeline", "debugging", "ai", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "azure-ai-inference>=1.0.0b1",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
pipeline-guardian = "pipeline_guardian.cli:main"
pg = "pipeline_guardian.cli:main"
pg-server = "pipeline_guardian.server:main"

[project.urls]
Homepage = "https://github.com/your-org/pipeline-guardian"
Repository = "https://github.com/your-org/pipeline-guardian"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline_guardian"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
